--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "api": "1.0.0",
   "main": "dist/index.js",
   "editorType": ["figma"],
+  "documentAccess": "dynamic-page",
   "networkAccess": {
     "allowedDomains": ["none"]
   },
