--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "^8.54.0",
     "tsup": "^8.0.2",
     "type-fest": "^4.17.0",
-    "typescript": "^5.3.2"
+    "typescript": "5.4.5"
   },
   "eslintConfig": {
     "extends": [
